Lesson18_Homework - task 2 + creatig common main class

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
                     <archive>
                         <manifest>
                             <!-- Jar file entry point -->
-                            <mainClass>euler2/Euler2App</mainClass>
+                            <mainClass>EulerApp</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
